--- a/client/angular.json
+++ b/client/angular.json
@@ -23,6 +23,8 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -67,6 +69,9 @@
               "browserTarget": "client:build:production"
             },
             "development": {
+              "sslKey": "./ssl/server.key",
+              "sslCert": "./ssl/server.crt",
+              "ssl":true,
               "browserTarget": "client:build:development"
             }
           },
