--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.2.0",
     "bootstrap": "^4.5.3",
     "ngx-bootstrap": "^7.1.2",
+    "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
