--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "bootstrap": "^4.5.3",
+    "bootswatch": "^5.3.3",
     "ngx-bootstrap": "^7.1.2",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
