--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@kolkov/ngx-gallery": "^2.0.1",
     "bootstrap": "^4.5.3",
     "bootswatch": "^5.3.3",
+    "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^7.1.2",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
