--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
+    "@angular/cdk": "^19.0.5",
     "@angular/common": "^12.2.17",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
@@ -23,6 +24,7 @@
     "bootswatch": "^5.3.3",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^7.1.2",
+    "ngx-spinner": "^10.0.1",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
