--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
-    "@angular/cdk": "^19.0.5",
+    "@angular/cdk": "^12.2.0",
     "@angular/common": "^12.2.17",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@kolkov/ngx-gallery": "^2.0.1",
+    "@microsoft/signalr": "^8.0.7",
     "bootstrap": "^4.5.3",
     "bootswatch": "^5.3.3",
     "font-awesome": "^4.7.0",
